--- a/po/ca.po
+++ b/po/ca.po
@@ -13,15 +13,15 @@ msgstr ""
 "Project-Id-Version: chronojump\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-01-09 16:26+0100\n"
-"PO-Revision-Date: 2017-01-09 17:22+0100\n"
-"Last-Translator: Samuel Capellera <samuelcm@blanquerna.url.edu>\n"
+"PO-Revision-Date: 2017-01-13 17:54+0100\n"
+"Last-Translator: x.padulles@gmail.com <support@chronojump.org>\n"
 "Language-Team: \n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Poedit 1.8.7.1\n"
 
 #: ../CesarPlayer/Capturer/FakeCapturer.cs:81
 msgid "Fake live source"
@@ -2249,7 +2249,7 @@ msgstr "Importar"
 
 #: ../glade/encoder_configuration.glade.h:25
 msgid "Duplicate"
-msgstr ""
+msgstr "Duplicar"
 
 #: ../glade/encoder_configuration.glade.h:26
 #: ../glade/evaluator_window.glade.h:4 ../glade/execute_auto.glade.h:20
@@ -2285,9 +2285,8 @@ msgid "Description"
 msgstr "Descripció"
 
 #: ../glade/encoder_configuration.glade.h:28
-#, fuzzy
 msgid "Apply"
-msgstr "Aplica a"
+msgstr "Aplicar"
 
 #: ../glade/encoder_configuration.glade.h:30
 msgid "grams"
@@ -4018,9 +4017,8 @@ msgstr ""
 "Siusplau, actualitzeu la versió actual del Chronojump."
 
 #: ../src/chronopic2016.cs:91
-#, fuzzy
 msgid "Port"
-msgstr "Portugal"
+msgstr "Port"
 
 #: ../src/chronopic2016.cs:92 ../src/gui/chronopicRegister.cs:113
 msgid "Serial Number"
@@ -5677,7 +5675,7 @@ msgstr "Acceptar"
 #: ../src/gui/encoderConfiguration.cs:698
 #: ../src/gui/encoderConfiguration.cs:700 ../src/gui/encoder.cs:1315
 msgid "copy"
-msgstr ""
+msgstr "copy"
 
 #: ../src/gui/encoderConfiguration.cs:649 ../src/gui/person.cs:1934
 #: ../src/gui/preferences.cs:700
@@ -5776,9 +5774,8 @@ msgid "name"
 msgstr "nom"
 
 #: ../src/gui/encoder.cs:1315
-#, fuzzy
 msgid "Unnamed"
-msgstr "nom"
+msgstr "Sense nom"
 
 #: ../src/gui/encoder.cs:1395 ../src/gui/encoder.cs:1693
 msgid "Are you sure you want to delete this set?"
