Mode on app1.Title (no more modes as unsensitive menu) and Help moved to the left

--- a/po/es.po
+++ b/po/es.po
@@ -228,8 +228,7 @@ msgstr "Carreras simples"
 #: ../glade/app1.glade.h:38
 msgid "Races intervallic"
 msgstr ""
-"Carreras con\n"
-"tramos"
+"Carreras con tramos"
 
 #: ../glade/app1.glade.h:39
 msgid "Encoder (gravitatory)"
